replace js with scss

--- a/cpds/packages/lib1/project.json
+++ b/cpds/packages/lib1/project.json
@@ -6,26 +6,18 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/lib1/**/*.ts"]
-      }
-    },
-    "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/packages/lib1"],
-      "options": {
-        "jestConfig": "packages/lib1/jest.config.ts",
-        "passWithNoTests": true
+        "lintFilePatterns": ["packages/lib1/**/*.scss"]
       }
     },
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/lib1",
+        "outputPath": "dist/lib1",
         "tsConfig": "packages/lib1/tsconfig.lib.json",
         "packageJson": "packages/lib1/package.json",
-        "main": "packages/lib1/src/index.ts",
-        "assets": ["packages/lib1/*.md"]
+        "main": "packages/lib1/src/index.scss",
+        "assets": ["packages/lib1/src/**/*.scss"]
       }
     }
   },
